--- a/package.json
+++ b/package.json
@@ -60,8 +60,11 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "jspdf": "^2.5.1",
+    "xlsx": "^0.18.5"
   },
+  
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
