--- a/.github/workflows/deploy-supabase-functions.yml
+++ b/.github/workflows/deploy-supabase-functions.yml
@@ -19,13 +19,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
-      - name: Install supabase CLI
-        run: npm i -g supabase
+      - name: Show environment
+        run: node --version && npm --version
 
-      - name: Show supabase version
-        run: supabase --version
+      - name: Ensure supabase CLI available via npx
+        run: npx --yes supabase@latest --version
 
       - name: Configure service role secret (if provided)
         if: ${{ env.SUPABASE_SERVICE_ROLE != '' }}
@@ -35,7 +35,7 @@ jobs:
 
       - name: Deploy create_user function
         run: |
-          echo "Deploying create_user function"
-          supabase functions deploy create_user --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
+          echo "Deploying create_user function via npx"
+          npx --yes supabase@latest functions deploy create_user --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
