--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "packageManager": "pnpm@10.2.1"
+    
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
